Update config with custom domain URL

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/rdeago"
 
-url:         "https://rdeago.github.io/"
+url:         "https://riccar.do/"
 baseurl:     ""
 locale:      "en-US"
 date_format: "%b %-d, %Y"
