Fix duplicate title in config; change site title.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: "Riccardo De Agostini"
-title: "Ric's ramblings"
+title: "Riccar.do"
 # subtitle: ""
 description: "A collection of scattered toughts on software development"
 author:
