Change site title; add subtitle.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Riccar.do"
-# subtitle: ""
+title: "riccar.do"
+subtitle: "A blog"
 description: "A collection of scattered toughts on software development"
 author:
   name: "Riccardo De Agostini"
