Change site subtitle.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title      : "riccar.do"
-subtitle   : "A blog"
+subtitle   : "A blog. Sort of."
 description: "A collection of scattered toughts on software development"
 author:
   name    : "Riccardo De Agostini"
