--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ defaults:
   # _pages
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout        : single
       author_profile: true
