--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   deploy-pages:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read
       pages: write
